<resources>
    <string name="app_name">Awok</string>


    <string name="always_low_prices">always low prices</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="go_to_top">Top</string>
    <string name="keywords">Keywords</string>
    <string name="color">Color</string>
    <string name="country_code">+971</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Enter Email Id</string>
    <string name="user_login_register">User Log In/Register</string>
    <string name="logout">Logout</string>
    <string name="cart_alert">Cart Alert</string>
    <string name="caution">Caution</string>
    <string name="country_code_header">Country Code</string>
    <string name="copyright">&#169; Copyright 2015 Awok.com, All Rights Reserved.</string>
    <string name="ship_to">Ship to:</string>
    <string name="change_address">Change Address ></string>
    <string name="add_new_address">Add New Address ></string>
    <string name="add_new_address_header">Add New Address</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="secure_checkout">Secure Checkout</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="my_orders">My Orders</string>
    <string name="payment_method">Payment Method</string>
    <string name="facebook_app_id">533205070180105</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="address_1">Address </string>
    <string name="address_2">Address </string>
    <string name="profile_picture">Profile Picture</string>

    <string name="buy_now">BUY NOW</string>

    <string name="login">LOGIN</string>
    <string name="enter_password_to_login">Please enter your password to login.</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="enter_password_and_confirm_password">Please enter your password and confirm password to register.</string>
    <string name="head_txt">Stylish Design</string>
    <string name="body_txt">A sophisticated design and practicality. The Samsung Galaxy Tab 4 (10.1") has it all. Its sleek design is accented by a luxurious back cover with a leather-like texture that adds a premium feel and classic look.</string>
    <string name="enter_mobile_number">Enter your mobile number(+971) **********</string>
    <string name="enter_emailId">Enter your Email Id</string>
    <string name="enter_email">Enter your Email Address</string>
    <string name="order_placed_successfully">Your order has been placed successfully</string>
    <string name="order_placed_failure">Your order was failed and was not placed! Please try again.</string>
    <string name="skip">Skip</string>
    <string name="verify_now">VERIFY NOW ></string>
    <string name="checkout_head">Xperia™ Z5 Premium
Introducing the world’s first 4K smartphone</string>
    <string name="check_out_price">3000 AED</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_min_char">Please Enter atleast 6 characters</string>
    <string name="total">Total:</string>
    <string name="aed">AED</string>
    <string name="please_confirm_password">Please Confirm Your Password</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="incorrect_mobile">Mobile number is incorrect</string>
    <string name="incorrect_email">Email Id is incorrect</string>
    <!--<string name="enter_password">Please Enter Password</string>-->
    <!--<string name="enter_password">Please Enter Password</string>-->
    <!--<string name="enter_password">Please Enter Password</string>-->
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesnt support speech input</string>



    <string name="checkout_guest_header">Checkout as a Guest</string>
    <string name="login_with_awok_header">Login with AWOK account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with">OR Sign in with</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="log_in_to_your_account">1. Log in to your account</string>
    <string name="select_payment_method">2. Select Payment Method</string>
    <string name="checkout_guest_message">Havent set up a an account yet? Youll have the chance to create an account as youre checking out</string>

    <string name="create_your_account">Lets create your account</string>
    <string name="full_name">Full Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="save">SAVE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_phone">Phone Number with area code</string>
    <string name="create_account">CREATE ACCOUNT</string>

    <string name="enter_your_full_name">Enter your full name</string>
    <string name="full_name_on_card">Full Name on a Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_digits">(The 16 digits on front of your card)</string>
    <string name="cvv">CVV2/CVC2</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="last_digits_displayed">The last 3 digits displayed on back of your credit/debit card</string>
    <string name="next">NEXT</string>
    <string name="ok">OKAY</string>

    <string name="cancel">CANCEL</string>
    <string name="back">BACK</string>


    <string name="enter_email_address">Enter your email address</string>
    <string name="continue_checkout">Checkout as a Guest</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="gender_prompt">Select Gender</string>

    <string-array name="gender_array">

        <item>Male</item>

        <item>Female</item>

    </string-array>




    <string-array name="object_array">

        <item>1</item>

        <item>2</item>

        <item>3</item>

        <item>4</item>

        <item>5</item>

        <item>6</item>

        <item>7</item>

        <item>8</item>

        <item>9</item>

        <item>10</item>

    </string-array>



    <string-array name="currency">

        <item>United Arab Emirates Dirhams (AED)</item>

        <item> United States dollar (USD)</item>

        <item>European Euro (EUR)</item>

        <item>Japanese Yen (JPY)</item>

        <item>British Pound (GBP)</item>

        <item> Australian dollar	(AUD) </item>



    </string-array>

    <string name="title_activity_order_summary">OrderSummaryActivity</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="payment_method_activity">PaymentMethodActivity</string>
    <string name="title_activity_order_history">OrderHistory</string>
    <string name="title_activity_order_history_details_page">OrderHistoryDetailsPage</string>
    <string name="title_activity_shipping_delivery_frag">ShippingDeliveryFrag</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_currency_selection">CurrencySelectionActivity</string>
    <string name="title_activity_currency_pick">CurrencyPickActivity</string>
    <string name="seller">Seller</string>
    <string name="title_activity_shipping_address">ShippingAddressActivity</string>
    <string name="title_activity_add_new_address">AddNewAddress</string>
    <string name="err_msg_name">Invalid or Incorrect Name</string>
    <string name="err_msg_add">Please Enter Address</string>
    <string name="err_msg_email">Please Enter Email</string>
    <string name="err_msg_pin">Invalid PIN</string>
    <string name="err_msg_phone">Invalid Phone Number</string>
    <string name="discount">41%</string>
    <string name="title_activity_order_summary_filter">OrderSummaryFilter</string>
    <string name="title_activity_dispute">DisputeActivity</string>
    <string name="placeDispute">Place Dispute</string>
    <string name="modifyDispute">Modify Dispute</string>
    <string name="productPopup">Please Select a Product</string>
    <string name="title_activity_dispute_details">DisputeDetails</string>
    <string name="title_activity_modify_dispute">ModifyDispute</string>
    <string name="title_activity_dispute_list">DisputeList</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_pick__payment__activity">Pick_Payment_ACtivity</string>
    <string name="title_activity_offers">OffersActivity</string>
    <string name="title_activity_order_detail_summary">OrderDetailSummary</string>
    <string name="title_activity_offers_category">OffersCategoryActivity</string>
    <string name="title_activity_category_web_view">CategoryWebView</string>
</resources>
