<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTextView"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/checkout_guest_header"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/messageTextView"
        android:textSize="14sp"
        android:textColor="#000"
        android:text="@string/checkout_guest_message"
        android:layout_below="@+id/headerTextView"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/emailEditText"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageTextView"
        android:hint="@string/enter_email_address"
        />

    <Button
        android:id="@+id/continueButton"
        android:padding="5dp"
        android:text="@string/continue_checkout"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="#512DA8"
        android:layout_below="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </RelativeLayout>