<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTextView"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/login_with_awok_header"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/usernameEditText"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerTextView"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/usernameEditText"
        android:hint="@string/password"
        />


    <Button
        android:id="@+id/forgotPasswordButton"
        android:padding="5dp"
        android:text="@string/forgot_password"
        android:textColor="#aaa"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="#0000"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/continueButton"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="#512DA8"
        android:layout_below="@+id/forgotPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/orSignInWithTextView"
        android:textSize="16sp"
        android:textColor="#333"
        android:text="@string/or_sign_in_with"
        android:layout_below="@+id/continueButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/socialMediaLayout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/orSignInWithTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fbSignInImageView"
            android:layout_margin="10dp"
            android:background="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/twitterSignInImageView"
            android:layout_margin="10dp"
            android:background="@drawable/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/linkedInSignInImageView"
            android:layout_margin="10dp"
            android:background="@drawable/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/googlePlusSignInImageView"
            android:layout_margin="10dp"
            android:background="@drawable/googleplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    </RelativeLayout>