<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="15dp"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textColor="#FFF"/>
    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/headerTextView"
        android:text="@string/enter_mobile_number"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="#FFF"/>

    <EditText
        android:id="@+id/mobileEditText"
        android:hint="@string/mobile_number"
        android:padding="10dp"
        android:inputType="phone"
        android:textColorHint="#aaa"
        android:layout_below="@+id/msgTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verify"
        android:textColor="#FFFFFF"
        android:background="#0000"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mobileEditText"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        />

</RelativeLayout>